--- a/t1.html
+++ b/t1.html
@@ -20,6 +20,7 @@
 body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
     position: Relative;
+    display: flex;
     top: 10%;
     right: 0%;
     left: 0%;
@@ -34,6 +35,7 @@ body::before {
 
 .form-container {
     background-color: #d4d7e4;
+    display: flex;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -45,6 +47,7 @@ body::before {
 
 .form-container h2 {
     text-align: center;
+    display: flex;
     margin-bottom: 20px;
     color: #333;
     font-size: 24px;
@@ -80,6 +83,7 @@ body::before {
 
 .submit-btn {
     background-color: #007bff;
+    display: flex;
     color: #ffffff;
     border: none;
     padding: 12px 20px;
