--- a/t1.html
+++ b/t1.html
@@ -13,13 +13,13 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    position: relative;
+    position: flex;
 }
 
 /* Background text styling */
 body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
-    position: Relative;
+    position: Flex;
     display: flex;
     top: 10%;
     right: 0%;
