--- a/t1.html
+++ b/t1.html
@@ -21,8 +21,8 @@ body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
     position: Flex;
     display: flex;
-    top: 10%;
-    right: 0%;
+    top: 70%;
+    right:50%;
     left: 0%;
     transform: translate(-30%, -50%);
     font-size: 3rem;
@@ -39,9 +39,9 @@ body::before {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    width: 30px;
+    width: 250px;
     max-width: 90%;
-    position: relative;
+    position: Center;
     
 }
 
