--- a/t1.html
+++ b/t1.html
@@ -9,7 +9,7 @@
     font-family: Arial, sans-serif;
     background-color: #a7f3c4;
     display: flex;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     height: 100vh;
     margin: 0;
@@ -19,7 +19,7 @@
 /* Background text styling */
 body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
-    position: Flex;
+    position: top;
     display: flex;
     top: 70%;
     right:50%;
