--- a/t1.html
+++ b/t1.html
@@ -19,7 +19,7 @@
 /* Background text styling */
 body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
-    position: top;
+    position: center;
     display: flex;
     top: 70%;
     right:50%;
