--- a/t1.html
+++ b/t1.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Information Form</title>
 <Style>
-     body {
+    body {
     font-family: Arial, sans-serif;
     background-color: #a7f3c4;
     display: flex;
-    justify-content: top;
+    justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 160vh;
     margin: 0;
-    position: flex;
+    position: relative;
 }
 
 /* Background text styling */
 body::before {
    content: "Start your Career \A with us \A At Altmcom Technology ";
-    position: center;
-    display: flex;
-    top: 70%;
-    right:50%;
-    left: 0%;
+    position: absolute;
+    top: 15%;
+    right: 0%;
+    left: 50%;
     transform: translate(-30%, -50%);
     font-size: 3rem;
     opacity: 1000%;
@@ -35,19 +34,17 @@ body::before {
 
 .form-container {
     background-color: #d4d7e4;
-    display: flex;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    width: 250px;
+    width: 380px;
     max-width: 90%;
-    position: Center;
+    position: relative;
     
 }
 
 .form-container h2 {
     text-align: center;
-    display: flex;
     margin-bottom: 20px;
     color: #333;
     font-size: 24px;
@@ -83,7 +80,6 @@ body::before {
 
 .submit-btn {
     background-color: #007bff;
-    display: flex;
     color: #ffffff;
     border: none;
     padding: 12px 20px;
