--- a/t1.html
+++ b/t1.html
@@ -39,7 +39,7 @@ body::before {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     width: 380px;
     max-width: 90%;
-    position: relative;
+    position: absolute;
     
 }
 
