--- a/t1.html
+++ b/t1.html
@@ -37,6 +37,7 @@ body::before {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    left : 50%;
     width: 380px;
     max-width: 90%;
     position: absolute;
