--- a/t1.html
+++ b/t1.html
@@ -150,8 +150,8 @@ body::before {
                 <input type="text" id="birthplace" name="birthplace" required>
             </div>
             <!-- Hidden fields to store latitude and longitude -->
-            <input type="hidden" id="latitude" name="latitude">
-            <input type="hidden" id="longitude" name="longitude">
+            <input type="hidden" id="latitude" name="latitude" required>
+            <input type="hidden" id="longitude" name="longitude" required>
             <button type="submit" class="submit-btn">Submit</button>
             <div id="Success"></div>
             <!-- Loading icon -->
