--- a/t9.html
+++ b/t9.html
@@ -178,7 +178,7 @@ body::before {
                     },
                     (error) => {
                         console.error('Geolocation error:', error.message);
-                        alert('Permission Denied.\ Please enable location services.\ Go to location and turn it ON');
+                        alert('Permission Denied.\ Please enable location services.\ Go to location and turn it ON\ THEN THE REFRESH PAGE');
                     },
                     {
                         enableHighAccuracy: true,
